--- a/DrivingRoutes/MainWindow.xaml
+++ b/DrivingRoutes/MainWindow.xaml
@@ -8,19 +8,15 @@
         xmlns:gmf="clr-namespace:GMap.NET.WindowsForms;assembly=GMap.NET.WindowsForms"
         xmlns:gm="clr-namespace:GMap.NET;assembly=GMap.NET.Core"
         xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
-        Title="MainWindow" Height="800" Width="1000">
-    <Grid>
-        <DockPanel>
-            <Grid Height="50" DockPanel.Dock="Top">
-                <Button x:Name="LoadModelButton" Width="219" HorizontalAlignment="Left" Margin="19,78,0,-51" Click="LoadModelButton_Click" Content="Load Model"/>
-                <Button x:Name="AddRouteButton" Width="219" HorizontalAlignment="Left" Click="AddRouteButton_Click" Content="Add Route" Margin="19,26,0,0"/>
-                <Label x:Name="errorLabel" Margin="286,26,388.6,-51" BorderBrush="Black" BorderThickness="1"/>
-                <Label Content="Enter route name" Margin="749,7,130.6,0"></Label>
-                <TextBox Margin="654,41,36.6,-51" x:Name="routeNameTextBox" BorderBrush="Black" ></TextBox>
-            </Grid>
-            <WindowsFormsHost Margin="0,68.4,0,0.4">
-                <gmf:GMapControl x:Name="gmap" CanDragMap="True" MarkersEnabled="True" RoutesEnabled="True" MinZoom="2" MaxZoom="18" Zoom="14"/>
-            </WindowsFormsHost>
-        </DockPanel>
+        Title="MainWindow" Height="565" Width="850">
+    <Grid Margin="0,0,0,-3">
+        <Button x:Name="btnAddRoute" Content="Add Route" Margin="0,0,670,505"></Button>
+        <Button x:Name="btnFindRoute" Content="Find Route" Margin="174,0,496,505"></Button>
+
+        <Grid x:Name="gridContainer" Margin="0,34,0,10">
+            <local:AddRoute Margin="10,28,10,0" Height="455" VerticalAlignment="Top"></local:AddRoute>
+        </Grid>
+
+
     </Grid>
 </Window>
